src/test/deca/context/invalid/renduInter01/01Ineq_comparator_type_incompatible.deca
// Description:
//      Expression conditionnelle incorrecte au niveau de la comparaison
//      => les types int et string ne peuvent pas être comparés
//
// Resultats:
//      Erreur contextuelle
//      Ligne 9 : Types int et string incompatibles pour la comparaison

{
    int x = 2;
    if ( x > "hello" ) {
        println("ok");
    } else {
        print("erreur");
    }
}
